--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -126,6 +126,7 @@ const fullTitle =
 
     <main
       class="relative z-10 pt-32 px-6 max-w-7xl mx-auto w-full flex-grow pb-24 md:pb-0"
+      transition:animate="fade"
     >
       <slot />
     </main>
