feat: Implement self-hosted variable fonts and update UnoCSS font configuration.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,11 @@ import SearchModal from "../components/SearchModal";
 import { getLangFromUrl } from "../i18n/utils";
 import "../styles/global.css";
 
+// Font Optimizations (Self-hosted)
+import "@fontsource-variable/inter";
+import "@fontsource-variable/jetbrains-mono";
+import "@fontsource-variable/outfit";
+
 const lang = getLangFromUrl(Astro.url);
 
 interface Props {
