--- a/src/pages/zh-SG/login/index.astro
+++ b/src/pages/zh-SG/login/index.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import { useTranslations } from "../../i18n/utils";
+import Layout from "../../../layouts/Layout.astro";
+import { useTranslations } from "../../../i18n/utils";
 
-const lang = "en-SG";
+const lang = "zh-SG";
 const t = useTranslations(lang);
 ---
 
